Added batch_id as a /clean query parameter
